tests/integration/snapshots/integration__snapshot__excessive_permissions-5.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-write-all.yml\")).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:3:1
  |
3 | permissions: write-all
  | ^^^^^^^^^^^^^^^^^^^^^^ uses write-all permissions
  |
  = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
